Add missing PVs

--- a/BNT_ULx.ini
+++ b/BNT_ULx.ini
@@ -60,6 +60,11 @@ BNT_ULx:BNT_ULx-MCSV-AIAvg.SamplesPerChannel=1000
 BNT_ULx:BNT_ULx-MCSV-AIAvg.SampleRate=1000
 BNT_ULx:BNT_ULx-MCSV-AIAvg.ClockSource="OnboardClock" #"OnboardClock","ExternalClock","NoClock"
 [BNTULx.URLs]
+ClassName="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_ClassName?.1"
+LaunchedDT="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_LaunchedDT?.1"
+LaunchedT="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_LaunchedT?.1"
+MsgCounter="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_MsgCounter?.1"
+SystemID="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_SystemID?.1"
 PollingCounter="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_PollingCounter?.1"
 PollingDeltaT="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_PollingDeltaT?.1"
 PollingInterval="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_PollingInterval?.1"
