Prepare ini-file for MQTT as default.

--- a/BNT_ULx.ini
+++ b/BNT_ULx.ini
@@ -60,69 +60,69 @@ BNT_ULx:BNT_ULx-MCSV-AIAvg.SamplesPerChannel=1000
 BNT_ULx:BNT_ULx-MCSV-AIAvg.SampleRate=1000
 BNT_ULx:BNT_ULx-MCSV-AIAvg.ClockSource="OnboardClock" #"OnboardClock","ExternalClock","NoClock"
 [BNTULx.URLs]
-ClassName="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_ClassName?.1"
-LaunchedDT="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_LaunchedDT?.1"
-LaunchedT="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_LaunchedT?.1"
-MsgCounter="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_MsgCounter?.1"
-SystemID="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_SystemID?.1"
-PollingCounter="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_PollingCounter?.1"
-PollingDeltaT="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_PollingDeltaT?.1"
-PollingInterval="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_PollingInterval?.1"
-PollingIterations="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_PollingIterations?.1"
-PollingMode="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_PollingMode"
-PollingTime="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_PollingTime"
-ResourceName="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_ResourceName"
-DriverRevision="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_DriverRevision"
-FirmwareRevision="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_FirmwareRevision"
-SelftestResultCode="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_SelftestResultCode"
-SelftestResultMessage="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_SelftestResultMessage"
-Error="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Error"
-ErrorStatus="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_ErrorStatus"
-ErrorCode="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_ErrorCode"
-ErrorMessage="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_ErrorMessage"
-AI="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_AI"
-AI0="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_AI_0"
-AI1="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_AI_1"
-AI2="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_AI_2"
-AI3="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_AI_3"
-AI4="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_AI_4"
-AI5="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_AI_5"
-AI6="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_AI_6"
-AI7="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_AI_7"
-AO="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_AO"
-AO0="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_AO_0"
-AO1="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_AO_1"
-Counter="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Counter"
-Counter0="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Counter_0"
-Counter1="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Counter_1"
-DI="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_DI"
-DI0="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_DI_0"
-DI1="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_DI_1"
-DI2="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_DI_2"
-DI3="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_DI_3"
-DO="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_DO"
-DO0="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_DO_0"
-DO1="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_DO_1"
-DO2="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_DO_2"
-DO3="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_DO_3"
-Frequency="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Frequency"
-Frequency0="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Frequency_0"
-Frequency1="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Frequency_1"
-PWMDelay="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_PWMDelay"
-PWMDelay0="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_PWMDelay_0"
-PWMDelay1="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_PWMDelay_1"
-PWMDelay2="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_PWMDelay_2"
-PWMDelay3="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_PWMDelay_3"
-PWMLength="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_PWMLength"
-PWMLength0="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_PWMLength_0"
-PWMLength1="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_PWMLength_1"
-PWMLength2="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_PWMLength_2"
-PWMLength3="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_PWMLength_3"
-PWMRatio="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_PWMRatio"
-PWMRatio0="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_PWMRatio_0"
-PWMRatio1="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_PWMRatio_1"
-PWMRatio2="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_PWMRatio_2"
-PWMRatio3="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_PWMRatio_3"
+ClassName="mqttp://localhost/BNT_ULx/BNTULx/ClassName"
+LaunchedDT="mqttp://localhost/BNT_ULx/BNTULx/LaunchedDT"
+LaunchedT="mqttp://localhost/BNT_ULx/BNTULx/LaunchedT"
+MsgCounter="mqttp://localhost/BNT_ULx/BNTULx/MsgCounter"
+SystemID="mqttp://localhost/BNT_ULx/BNTULx/SystemID"
+PollingCounter="mqttp://localhost/BNT_ULx/BNTULx/PollingCounter"
+PollingDeltaT="mqttp://localhost/BNT_ULx/BNTULx/PollingDeltaT"
+PollingInterval="mqttp://localhost/BNT_ULx/BNTULx/PollingInterval"
+PollingIterations="mqttp://localhost/BNT_ULx/BNTULx/PollingIterations"
+PollingMode="mqttp://localhost/BNT_ULx/BNTULx/PollingMode"
+PollingTime="mqttp://localhost/BNT_ULx/BNTULx/PollingTime"
+ResourceName="mqttp://localhost/BNT_ULx/BNTULx/ResourceName"
+DriverRevision="mqttp://localhost/BNT_ULx/BNTULx/DriverRevision"
+FirmwareRevision="mqttp://localhost/BNT_ULx/BNTULx/FirmwareRevision"
+SelftestResultCode="mqttp://localhost/BNT_ULx/BNTULx/SelftestResultCode"
+SelftestResultMessage="mqttp://localhost/BNT_ULx/BNTULx/SelftestResultMessage"
+Error="mqttp://localhost/BNT_ULx/BNTULx/Error"
+ErrorStatus="mqttp://localhost/BNT_ULx/BNTULx/ErrorStatus"
+ErrorCode="mqttp://localhost/BNT_ULx/BNTULx/ErrorCode"
+ErrorMessage="mqttp://localhost/BNT_ULx/BNTULx/ErrorMessage"
+AI="mqttp://localhost/BNT_ULx/BNTULx/AI"
+AI0="mqttp://localhost/BNT_ULx/BNT_ULx_AI/0"
+AI1="mqttp://localhost/BNT_ULx/BNTULx/AI/1"
+AI2="mqttp://localhost/BNT_ULx/BNTULx/AI/2"
+AI3="mqttp://localhost/BNT_ULx/BNTULx/AI/3"
+AI4="mqttp://localhost/BNT_ULx/BNTULx/AI/4"
+AI5="mqttp://localhost/BNT_ULx/BNTULx/AI/5"
+AI6="mqttp://localhost/BNT_ULx/BNTULx/AI/6"
+AI7="mqttp://localhost/BNT_ULx/BNTULx/AI/7"
+AO="mqttp://localhost/BNT_ULx/BNTULx/AO"
+AO0="mqttp://localhost/BNT_ULx/BNTULx/AO/0"
+AO1="mqttp://localhost/BNT_ULx/BNTULx/AO/1"
+Counter="mqttp://localhost/BNT_ULx/BNTULx/Counter"
+Counter0="mqttp://localhost/BNT_ULx/BNTULx/Counter/0"
+Counter1="mqttp://localhost/BNT_ULx/BNTULx/Counter/1"
+DI="mqttp://localhost/BNT_ULx/BNTULx/DI"
+DI0="mqttp://localhost/BNT_ULx/BNTULx/DI/0"
+DI1="mqttp://localhost/BNT_ULx/BNTULx/DI/1"
+DI2="mqttp://localhost/BNT_ULx/BNTULx/DI/2"
+DI3="mqttp://localhost/BNT_ULx/BNTULx/DI/3"
+DO="mqttp://localhost/BNT_ULx/BNTULx/DO"
+DO0="mqttp://localhost/BNT_ULx/BNTULx/DO/0"
+DO1="mqttp://localhost/BNT_ULx/BNTULx/DO/1"
+DO2="mqttp://localhost/BNT_ULx/BNTULx/DO/2"
+DO3="mqttp://localhost/BNT_ULx/BNTULx/DO/3"
+Frequency="mqttp://localhost/BNT_ULx/BNTULx/Frequency"
+Frequency0="mqttp://localhost/BNT_ULx/BNTULx/Frequency/0"
+Frequency1="mqttp://localhost/BNT_ULx/BNTULx/Frequency/1"
+PWMDelay="mqttp://localhost/BNT_ULx/BNTULx/PWMDelay"
+PWMDelay0="mqttp://localhost/BNT_ULx/BNTULx/PWMDelay/0"
+PWMDelay1="mqttp://localhost/BNT_ULx/BNTULx/PWMDelay/1"
+PWMDelay2="mqttp://localhost/BNT_ULx/BNTULx/PWMDelay/2"
+PWMDelay3="mqttp://localhost/BNT_ULx/BNTULx/PWMDelay/3"
+PWMLength="mqttp://localhost/BNT_ULx/BNTULx/PWMLength"
+PWMLength0="mqttp://localhost/BNT_ULx/BNTULx/PWMLength/0"
+PWMLength1="mqttp://localhost/BNT_ULx/BNTULx/PWMLength/1"
+PWMLength2="mqttp://localhost/BNT_ULx/BNTULx/PWMLength/2"
+PWMLength3="mqttp://localhost/BNT_ULx/BNTULx/PWMLength/3"
+PWMRatio="mqttp://localhost/BNT_ULx/BNTULx/PWMRatio"
+PWMRatio0="mqttp://localhost/BNT_ULx/BNTULx/PWMRatio/0"
+PWMRatio1="mqttp://localhost/BNT_ULx/BNTULx/PWMRatio/1"
+PWMRatio2="mqttp://localhost/BNT_ULx/BNTULx/PWMRatio/2"
+PWMRatio3="mqttp://localhost/BNT_ULx/BNTULx/PWMRatio/3"
 [BNTULxProxy]
 LVClassPath="CSPP_PVProxy.lvlib:CSPP_PVProxy.lvclass"
 CSPP_BaseActor:CSPP_BaseActor.DefaultGUI=""
@@ -130,30 +130,25 @@ CSPP_BaseActor:CSPP_BaseActor.LaunchDefaultGUI=False
 CSPP_PVProxy:CSPP_PVProxy.WorkerActor="BNTULx"
 CSPP_PVProxy:CSPP_PVProxy.DelayedActivation=True
 [BNTULxProxy.URLs]
-Polling_Interval_Msg="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-PollingInterval?.1"
-Polling_Iterations_Msg="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-PollingIterations?.1"
-Polling_Start_Stop_Msg="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-PollingStartStop?.1"
-WorkerActor="ni.var.psp://localhost/BNT_ULx_SV/BNTULxProxy_WorkerActor"
-Activate="ni.var.psp://localhost/BNT_ULx_SV/BNTULxProxy_Activate"
-Reset_Device_Msg="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-Reset"
-Selftest_Device_Msg="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-Selftest"
-Set_Output_Line_Msg="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-DOi"
-Set_Output_Line_Msg="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-DO_0,ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-DO_1,ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-DO_2,ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-DO_3"
-#Set_Output_Lines_Msg="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-DOsA"
-Set_Output_Lines_Msg="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-DO"
-#Set_Output_Value_Msg="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-AOi"
-Set_Output_Value_Msg="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-AO_0,ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-AO_1"
-#Set_Output_Values_Msg="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-AOsA"
-Set_Output_Values_Msg="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-AO"
-#Set_Ratio_Msg="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-PWMRatioi"
-#Set_Ratio_Msg="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-PWMRatio_0,ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-PWMRatio_1,ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-PWMRatio_2,ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-PWMRatio_3"
-#Set_Ratios_Msg="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-PWMRatiossA"
-#Set_Ratios_Msg="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-PWMRatios"
-#Set_Delay_Msg="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-PWMDelayi"
-#Set_Delay_Msg="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-PWMDelay_0,ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-PWMDelay_1,ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-PWMDelay_2,ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-PWMDelay_3"
-#Set_Delays_Msg="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-PWMDelayssA"
-#Set_Delays_Msg="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-PWMDelays"
-#Set_Length_Msg="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-PWMLengthi"
-#Set_Length_Msg="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-PWMLength_0,ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-PWMLength_1,ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-PWMLength_2,ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-PWMLength_3"
-#Set_Lengths_Msg="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-PWMLengthssA"
-#Set_Lengths_Msg="ni.var.psp://localhost/BNT_ULx_SV/BNTULx_Set-PWMLengths"
+WorkerActor="mqttp://localhost/BNT_ULx/BNTULxProxy/WorkerActor"
+Activate="mqtts://localhost/BNT_ULx/BNTULxProxy/Activate"
+Polling_Interval_Msg="mqtts://localhost/BNT_ULx/BNTULx/Set-PollingInterval"
+Polling_Iterations_Msg="mqtts://localhost/BNT_ULx/BNTULx/Set-PollingIterations"
+Polling_Start_Stop_Msg="mqtts://localhost/BNT_ULx/BNTULx/Set-PollingStartStop"
+Reset_Device_Msg="mqtts://localhost/BNT_ULx/BNTULx/Set-Reset"
+Selftest_Device_Msg="mqtts://localhost/BNT_ULx/BNTULx/Set-Selftest"
+Set_Output_Line_Msg="mqtts://localhost/BNT_ULx/BNTULx/Set-DOi"
+Set_Output_Line_Msg="mqtts://localhost/BNT_ULx/BNTULx/Set-DO/0,mqtts://localhost/BNT_ULx/BNTULx/Set-DO/1,mqtts://localhost/BNT_ULx/BNTULx/Set-DO/2,mqtts://localhost/BNT_ULx/BNTULx/Set-DO/3"
+Set_Output_Lines_Msg="mqtts://localhost/BNT_ULx/BNTULx/Set-DO"
+Set_Output_Value_Msg="mqtts://localhost/BNT_ULx/BNTULx/Set-AOi"
+Set_Output_Value_Msg="mqtts://localhost/BNT_ULx/BNTULx/Set-AO/0,mqtts://localhost/BNT_ULx/BNTULx/Set-AO/1"
+Set_Output_Values_Msg="mqtts://localhost/BNT_ULx/BNTULx/Set-AO"
+#Set_Ratio_Msg="mqtts://localhost/BNT_ULx/BNTULx/Set-PWMRatioi"
+#Set_Ratio_Msg="mqtts://localhost/BNT_ULx/BNTULx/Set-PWMRatio/0,mqtts://localhost/BNT_ULx/BNTULx/Set-PWMRatio/1,mqtts://localhost/BNT_ULx/BNTULx/Set-PWMRatio/2,mqtts://localhost/BNT_ULx/BNTULx/Set-PWMRatio/3"
+#Set_Ratios_Msg="mqtts://localhost/BNT_ULx/BNTULx/Set-PWMRatios"
+#Set_Delay_Msg="mqtts://localhost/BNT_ULx/BNTULx/Set-PWMDelayi"
+#Set_Delay_Msg="mqtts://localhost/BNT_ULx/BNTULx/Set-PWMDelay/0,mqtts://localhost/BNT_ULx/BNTULx/Set-PWMDelay/1,mqtts://localhost/BNT_ULx/BNTULx/Set-PWMDelay/2,mqtts://localhost/BNT_ULx/BNTULx/Set-PWMDelay/3"
+#Set_Delays_Msg="mqtts://localhost/BNT_ULx/BNTULx/Set-PWMDelays"
+#Set_Length_Msg="mqtts://localhost/BNT_ULx/BNTULx/Set-PWMLengthi"
+#Set_Length_Msg="mqtts://localhost/BNT_ULx/BNTULx/Set-PWMLength/0,mqtts://localhost/BNT_ULx/BNTULx/Set-PWMLength/1,mqtts://localhost/BNT_ULx/BNTULx/Set-PWMLength/2,mqtts://localhost/BNT_ULx/BNTULx/Set-PWMLength/3"
+#Set_Lengths_Msg="mqtts://localhost/BNT_ULx/BNTULx/Set-PWMLengths"
